Download model assets at runtime from Hugging Face.
Made-with: Cursor